globus-net-manager (1:0.23-1+gt6.@distro@) @distro@; urgency=low

  * update to support new distros

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jun 2022 11:01:57 -0500

globus-net-manager (1:0.22-1+gt6.@distro@) @distro@; urgency=low

  * Rebuild for new OSes
  * Update license text

 -- Globus Toolkit <support@globus.org>  Wed, 1 Dec 2021 09:57:40 -0500

globus-net-manager (1:0.21-1+gt6.@distro@) @distro@; urgency=low

  * Allow prerelease version tags

 -- Globus Toolkit <support@globus.org>  Fri, 23 Apr 2021 16:52:57 -0400

globus-net-manager (1:0.20-1+gt6.@distro@) @distro@; urgency=low

  * Use prebuilt doxyxgen if available

 -- Globus Toolkit <support@globus.org>  Fri, 26 Mar 2021 16:33:59 +0000

globus-net-manager (1:0.19-3+gt6.@distro@) @distro@; urgency=low

  * Modernize package metadata

 -- Globus Toolkit <support@globus.org>  Thu, 25 Mar 2021 11:13:16 -0400

globus-net-manager (1:0.19-2+gt6.@distro@) @distro@; urgency=low

  * Packaging update to ensure priority of Globus packages

 -- Globus Toolkit <support@globus.org>  Mon, 25 Nov 2019 10:41:46 -0600

globus-net-manager (0.19-1+gt6.@distro@) @distro@; urgency=low

  * support el8

 -- Globus Toolkit <support@globus.org>  Fri, 22 Nov 2019 00:14:20 -0600

globus-net-manager (0.18-1+gt6.@distro@) @distro@; urgency=low

  * fix pre-connect not using changed remote contact

 -- Globus Toolkit <support@globus.org>  Tue, 01 May 2018 11:08:20 -0500

globus-net-manager (0.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix .pc typo

 -- Globus Toolkit <support@globus.org>  Tue, 04 Apr 2017 12:22:23 -0400

globus-net-manager (0.16-1+gt6.@distro@) @distro@; urgency=low

  * exclude tests from doc

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:44:14 -0400

globus-net-manager (0.15-1+gt6.@distro@) @distro@; urgency=low

  * Use prelinks for tests so that they run on El Capitan

 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 15:03:47 -0400
